week02-gitlab-cicd-k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week2-service
spec:
  selector:
    app: week2-app
  ports:
    - port: 80
      targetPort: 5000
