week02-gitlab-cicd-k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: week2.lab.sananetco.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: week2-service
                port:
                  number: 80
